--- a/install
+++ b/install
@@ -5,8 +5,8 @@ read choice
 if [ $choice == 'y' ]; then
 	sudo apt-get install mplayer -y python3.5 -y python3-pip -y 
 	pip install colorama
-	echo "lirc=no\n" >>~.mplayer/config
-	echo "prefer-ipv4=yes\n" >>~.mplayer/config
+	echo "lirc=no\n" >>~/.mplayer/config
+	echo "prefer-ipv4=yes\n" >>~/.mplayer/config
 	chmod 755 ~/Downloads/Terminal-Metal-master/metal.py
 	sudo mv ~/Downloads/Terminal-Metal-master/metal.py /usr/local/bin
 	sudo mv ~/Downloads/Terminal-Metal-master/terminal-metal.svg/ usr/share/pixmaps
