--- a/install
+++ b/install
@@ -2,30 +2,33 @@
 echo "This will also install mplayer, python3.5, pip3 and coloroma"
 echo "Would you like to proceed? [y/n]" 
 read choice
-if [ $choice == 'y' ]; then
-	sudo apt-get install mplayer -y python3.5 -y python3-pip -y 
-	pip3 install colorama
-	
-	if [ -f ~/.mplayer/config ] 
+
+if [ $choice == 'y' ]; 
 	then
-	touch ~/.mplayer/config
-	echo "lirc=no" >>~/.mplayer/config
-	echo "prefer-ipv4=yes" >>~/.mplayer/config
-	else 
-	echo "lirc="no" >>~/.mplayer/config
-	echo "prefer-ipv4=yes">>~/.mplayer/config
-	fi
+		sudo apt-get install mplayer -y python3.5 -y python3-pip -y 
+		pip3 install colorama
 	
-	chmod 755 ~/Terminal-Metal/metal.py
-	chmod 755 ~/Terminal-Metal/metal.desktop
-	sudo mv ~/Terminal-Metal/metal.py /usr/local/bin
-	sudo mv ~/Terminal-Metal/terminal-metal.svg usr/share/pixmaps
-	sudo cp ~/Terminal-Metal/metal.desktop /usr/share/applications
-	mv ~/Terminal-Metal/metal.desktop ~/Desktop 
-	cd ~
-	sudo rm -r ~/Terminal-Metal
-else
-	echo "Exiting the program...."
+		if [ -f ~/.mplayer/config ];
+			then
+				touch ~/.mplayer/config
+				echo "lirc=no" >>~/.mplayer/config
+				echo "prefer-ipv4=yes" >>~/.mplayer/config
+			else 
+				echo "lirc=no" >>~/.mplayer/config
+				echo "prefer-ipv4=yes">>~/.mplayer/config
+		fi
+	
+		chmod 755 ~/Terminal-Metal/metal.py
+		chmod 755 ~/Terminal-Metal/metal.desktop
+		sudo mv ~/Terminal-Metal/metal.py /usr/local/bin
+		sudo mv ~/Terminal-Metal/terminal-metal.svg usr/share/pixmaps
+		sudo cp ~/Terminal-Metal/metal.desktop /usr/share/applications
+		mv ~/Terminal-Metal/metal.desktop ~/Desktop 
+		cd ~
+		sudo rm -r ~/Terminal-Metal
+	else
+		echo "Exiting the program...."
 fi
-	exit 1
+
+exit 1
  
