--- a/install
+++ b/install
@@ -25,7 +25,7 @@ if [ $choice == 'y' ];
 		sudo cp ~/Downloads/Terminal-Metal-master/metal.desktop /usr/share/applications
 		mv ~/Downloads/Terminal-Metal-master/metal.desktop ~/Desktop 
 		cd ~
-		sudo rm -r ~/Downloads/Terminal-Metal-master
+		sudo mv ~/Downloads/Terminal-Metal-master /usr/share
 	else
 		echo "Exiting the program...."
 fi
